--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,22 +26,25 @@
     <div class="header">
         <div class="container">
             <div class="row">
-                <div class="twelve columns">
+                <div class="eight columns">
                     <a class="u-link-color-override" href="{{ url_for('index') }}">
                         <!--<img class="logo img-circle u-pull-left" src="{{ url_for('static', filename='images/logo_128x128.png') }}">-->
                         <h4 class="title u-pull-left"><strong>SOLID</strong></h4>
                     </a>
+                </div>
                     {% if active_page != "login" %}
                         {% if current_user.is_authenticated %} 
+                        <div class="four columns">
                             <a href="{{ url_for('users.logout') }}" title="Log Out" class="button u-pull-right"><!--<img src="{# url_for('static', filename='open-iconic/svg/account-logout.svg') #}">-->Log Out</a>
                             <span class="user">
                                 Logged in as <a href="{{ url_for('users.user', nickname=current_user.nickname) }}">
                                     {{ current_user.nickname }}
                                 </a>
                             </span>
+                        </div>
                         {% else %}
-                            <a href="{{ url_for('users.login') }}" title="Log In" class="button button-login button-primary u-pull-right">Log In</a>
-                            <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
+                            <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button button-primary u-pull-right">Sign Up</a>
+                            <a href="{{ url_for('users.login') }}" title="Log In" class="button u-add-margin-right u-pull-right">Log In</a>
                         {% endif %}
                     {% else %}
                             <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
