For some reason svg icons weren't displaying, fixed it by turning them to png

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,9 +101,9 @@
                 </div>
                 <div class="three columns">
                     <h4>Follow Us</h4>
-                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/twitter.svg') }}"></a>
-                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/reddit.svg') }}"></a>
-                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.svg') }}"></a>
+                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/twitter.png') }}"></a>
+                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/reddit.png') }}"></a>
+                    <a href="#"><img class="icon-social" src="{{ url_for('static', filename='icons/facebook-square.png') }}"></a>
                 </div>
             </div>
             <hr>
