--- a/app/templates/helpers/modals.html
+++ b/app/templates/helpers/modals.html
@@ -9,7 +9,7 @@ section (app/templates/styleguide/templating#modal-helpers)
     <div>
         <h3 class="u-pull-left">{{ title }}</h3>
         <a href="#" class="button-modal-close u-pull-right">
-            <img src="{{ url_for('static', filename='open-iconic/svg/x.svg') }}" alt="X" />
+            <img src="{{ url_for('static', filename='open-iconic/png/x-2x.png') }}" alt="X" />
         </a>
         <p class="u-cf">{{ content }}</p>
     </div>
