--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+{% from "helpers/modals.html" import render_modal %}
 <div class="masthead"
         {% if cause.image %}style="background-image: linear-gradient(190deg, rgba(255, 255, 255, 0), white, white), url({{ url_for('static', filename=cause.image) }});"{% endif %}>
     <div class="row" >
@@ -26,10 +27,7 @@
     <div class="row" >
     </div>
         <p class="twelve columns">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book
+            {{ cause.story_content }}
         </p>
     </div>
     <div class="row">
@@ -43,14 +41,13 @@
         </div>
         <div class="four columns">
             {% if supporter %}
-            <a class="button button-disabled u-full-width"
-                    href="#">
-                Supporting</a>
+                <a class="button button-disabled u-full-width" href="#">Supporting</a>
             {% else %}
-            <a class="button button-primary u-full-width"
-                    data-target="modal-support"
-                    href="{{ url_for('causes.cause_support', slug=cause.slug) }}">
-                Stand with us!</a>
+                {{ render_modal('modal-support',
+                                'Stand with us!',
+                                'Lorem Ipsum is simply dummy text of printing and typesetting',
+                                'Stand with us!',
+                                'button button-primary u-full-width') }}
             <a class="button button-primary u-full-width"
                 data-target="modal-support">
                 No url</a>
@@ -79,7 +76,7 @@
         <div>
             <h3 class="u-pull-left">Take action!</h3>
             <a href="#" class="button-modal-close u-pull-right">
-                <img src="/static/open-iconic/svg/x.svg" alt="X" />
+                <img src="/static/open-iconic/png/x.png" alt="X" />
             </a>
             <p class="u-cf">
                 {{ action.description }}
@@ -98,20 +95,5 @@
     </h2>
     {% from "helpers/posts.html" import render_post_list %}
     {{ render_post_list(cause) }}
-</div>
-
-<div id="modal-support" class="modal">
-    <div>
-        <h3 class="u-pull-left">Stand with us!</h3>
-        <a href="#" class="button-modal-close u-pull-right">
-            <img src="/static/open-iconic/svg/x.svg" alt="X" />
-        </a>
-        <p class="u-cf">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-        </p>
-        <p class="u-cf">
-            Standing with this cause means dolor sit amet.
-        </p>
-    </div>
 </div>
 {% endblock %}
