--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -195,10 +195,11 @@ a:hover {
     text-decoration: none;
 }
 .content {
-    margin-top: 9rem;
+    /*margin-top: 9rem;*/
 }
 .masthead {
     background-size: cover;
+    padding: 9rem;
 }
 .support-action {
     display: block;
