--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="content container">    
+    <div class="content">    
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
