Cause page finished

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -171,6 +171,9 @@ a:hover {
     background: #fbfaf9;
     border-bottom: 1px solid #ff9900;
 }
+.full-width-container {
+    padding: 0 9rem;
+}
 .progress {
     display: block;
     height: 6.5rem;
