--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="header">
-        <div class="container">
+        <div class="full-width-container">
             <div class="row">
                 <div class="eight columns">
                     <a class="u-link-color-override" href="{{ url_for('index') }}">
