--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -202,7 +202,29 @@ a:hover {
 }
 .masthead {
     background-size: cover;
-    padding: 9rem;
+    padding: 9rem 0;
+    height: 24vw;
+    /*
+    */
+}
+.masthead-title {
+    padding: 0 9rem;
+    margin-top: 24vw;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+.masthead h1 {
+    font-size: 5rem;
+    margin-top: 3rem;
+    margin-bottom:0;
+    color: #fbfaf9;
+}
+@media (min-width: 750px) {
+    .masthead h1 {
+        font-size: 7.5rem;
+        margin-top: 0;
+        margin-bottom:0;
+        color: #fbfaf9;
+    }
 }
 .support-action {
     display: block;
