Added google analytics

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -2,6 +2,8 @@
 {% set active_page = "dashboard" %}
 
 {% block scripts %}
+{% from "helpers/analytics.html" import inject_tracking_code %}
+{{ inject_tracking_code() }}
 <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
 {% endblock %}
 
