--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -14,6 +14,7 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
+<div class="container u-add-margin-top">
     {% from "helpers/forms.html" import render_field, render_boolean %}
     <form id="login" name="login" action="" method="post">
         {{ form.hidden_tag() }}
@@ -57,15 +58,16 @@ $(document).ready(function() {
     </form>
     <hr>
     <div class="row">
-        <div class="three columns offset-by-three">
+        <div class="one-third column">
             <a href="{{ url_for('twitter.login') }}" class="button u-full-width">Log In with Twitter</a>
         </div>
-        <div class="three columns">
+        <div class="one-third column">
             <a href="{{ url_for('google.login') }}" class="button u-full-width">Log In with Google</a>
         </div>
-        <div class="three columns">
+        <div class="one-third column">
             <a href="{{ url_for('facebook.login') }}" class="button
                 u-full-width">Log In with Facebook</a>
         </div>
     </div>
+</div>
 {% endblock %}
