Proper action when user clicks on support button

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,7 @@
                 {% for category, message in messages %}
                     <div class="row">
                         <div class="twelve columns">
-                            <div class="flash {{ category }}" role="alert">{{ message }}</div>
+                            <div class="flash {{ category }} u-remove-margin-bottom" role="alert">{{ message }}</div>
                         </div>
                    </div>
                 {% endfor %}
