--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -75,15 +75,16 @@ a:hover {
 /* Alerts 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .flash {
-    display: block;
+    /* 
     border: 1px solid;
-    border-radius: 4px;
+    border-radius: 4px; 
+    */
+    display: block;
     padding: 15px;
     margin-bottom: 20px;
     animation: slide-down 0.3s cubic-bezier(.22,.61,.36,1) forwards;
     border-color: #e5e5e5;
     color: #524535;
-    /*animation: fade-in 0.5s;*/
 }
 .label,
 .help-block {
